--- a/Trocador.Core/Trocador.Core.csproj
+++ b/Trocador.Core/Trocador.Core.csproj
@@ -39,8 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContracts\AbstractRequest.cs" />
     <Compile Include="DataContracts\CalculateChangeRequest.cs" />
     <Compile Include="DataContracts\CalculateChangeResponse.cs" />
+    <Compile Include="DataContracts\ErrorReport.cs" />
     <Compile Include="TrocadorManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
