Separada a lógica de processamento de cédulas e moedas.

--- a/Trocador.Core/Trocador.Core.csproj
+++ b/Trocador.Core/Trocador.Core.csproj
@@ -44,8 +44,14 @@
     <Compile Include="DataContracts\CalculateChangeResponse.cs" />
     <Compile Include="DataContracts\ErrorReport.cs" />
     <Compile Include="MoneyUnit.cs" />
+    <Compile Include="Processors\BillProcessor.cs" />
+    <Compile Include="Processors\AbstractProcessor.cs" />
+    <Compile Include="Processors\CoinProcessor.cs" />
     <Compile Include="TrocadorManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ProcessorsDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
