--- a/Trocador.Test/App.config
+++ b/Trocador.Test/App.config
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
 	<appSettings>
 		<!--Tipos de log aceitos: File, EventViewer-->
-		<add key="LogType" value="EventViewer"/>
+		<add key="LogType" value="File"/>
 		<add key="LogFileName" value="log.log"/>
-		<add key="LogPath" value="c:\\Logs"/>
+		<add key="LogPath" value="c:\\Logs\\Teste"/>
 	</appSettings>
 </configuration>
