Implementada injeção de dependencia na classe TrocadorManager.

--- a/Trocador/App.config
+++ b/Trocador/App.config
@@ -5,7 +5,7 @@
     </startup>
 	<appSettings>
 		<!--Tipos de log aceitos: File, EventViewer-->
-		<add key="LogType" value="EventViewer"/>
+		<add key="LogType" value="File"/>
 		<add key="LogFileName" value="log.log"/>
 		<add key="LogPath" value="c:\\Logs"/>
 	</appSettings>
