--- a/Trocador.Test/Trocador.Test.csproj
+++ b/Trocador.Test/Trocador.Test.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trocador.Core.Test\Mocks\ConfigurationUtilityMock.cs" />
     <Compile Include="Trocador.Core.Test\TrocadorManagerTest.cs" />
     <Compile Include="Trocador.Core.Test\BillProcessorTest.cs" />
   </ItemGroup>
@@ -59,9 +60,6 @@
       <Project>{3c7d0aa6-843a-4d7f-9f02-a400b7527c41}</Project>
       <Name>Trocador.Core</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
